--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp_demo",
+  "name": "gulp-demo",
   "version": "0.1.0",
   "description": "Gulp.js + Angular 1.3.8 project",
   "authors": [
