--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-csso": "^3.0.0",
+    "gulp-filter": "^5.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
@@ -43,6 +44,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-print": "^2.0.1",
     "gulp-task-listing": "^1.0.1",
+    "gulp-uglify": "^2.1.2",
     "gulp-useref": "^2.0.0",
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.4",
