--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-demo",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Gulp.js + Angular 1.3.8 project",
   "authors": [
     "Craig Curtis"
@@ -30,6 +30,7 @@
     "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-bump": "^2.7.0",
     "gulp-csso": "^3.0.0",
     "gulp-filter": "^5.0.0",
     "gulp-htmlmin": "^3.0.0",
@@ -44,6 +45,8 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-print": "^2.0.1",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-task-listing": "^1.0.1",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^2.0.0",
