--- a/package.json
+++ b/package.json
@@ -53,6 +53,20 @@
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.4",
     "jshint-stylish": "^2.2.1",
+    "karma": "^1.6.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-coverage": "^1.1.1",
+    "karma-growl-reporter": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon": "^1.0.5",
+    "mocha": "^3.3.0",
+    "mocha-clean": "^1.0.0",
+    "phantomjs": "^2.1.7",
+    "sinon": "^2.2.0",
+    "sinon-chai": "^2.10.0",
     "wiredep": "^4.0.0",
     "yargs": "^7.1.0"
   }
