--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sinon": "^1.0.5",
+    "lodash": "^4.17.4",
     "mocha": "^3.3.0",
     "mocha-clean": "^1.0.0",
+    "node-notifier": "^5.1.2",
     "phantomjs": "^2.1.7",
     "sinon": "^2.2.0",
     "sinon-chai": "^2.10.0",
